add split test validat

--- a/Data_Engineering_defog.ipynb
+++ b/Data_Engineering_defog.ipynb
@@ -1866,7 +1866,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ### bz of low on ram reinput the dataset\n",
+    "# import pandas as pd\n",
+    "# clean_defog_dataset = pd.read_parquet('Data/clean/clean_defog_dataset.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1879,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1899,7 +1910,7 @@
        " 14                0     0        0       1.0)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1918,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1933,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +1953,7 @@
        "(12033219, 3)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1973,7 @@
        "(45510112, 3)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1974,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +1994,7 @@
        "(45510112, 4)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2015,7 @@
        "(11377528, 11377528, 11377528, 11377528)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2039,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2039,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2059,7 @@
        "45510112"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2060,7 +2071,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "oversampling_defog_dataset.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oversampling_defog_dataset.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45510105, 7)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# oversampling_defog_dataset.to_parquet('Data/clean/oversampling_defog_dataset.parquet')\n",
+    "oversampling_defog_dataset.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 70% Train Data, 10% Validation Data, 20% Test Data\n",
+    "\n",
+    "\n",
+    "80% Set Data(60% Train Data, 20% Validation Data) , 20% Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45510105, 7)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# bz of low memory import again\n",
+    "import pandas as pd\n",
+    "oversampling_defog_dataset = pd.read_parquet('Data/clean/oversampling_defog_dataset.parquet')\n",
+    "oversampling_defog_dataset.shape "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((36408084, 7), (9102021, 7))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "import random \n",
+    "random_seed = 54\n",
+    "\n",
+    "set_defog_data, test_defog_data = train_test_split(oversampling_defog_dataset, test_size=0.2, random_state=True)\n",
+    "set_defog_data.shape, test_defog_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "oversampling_defog_dataset.shape[0] == set_defog_data.shape[0] + test_defog_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2095,50 +2235,50 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.843750</td>\n",
-       "      <td>0.09375</td>\n",
-       "      <td>-0.671875</td>\n",
+       "      <th>35205870</th>\n",
+       "      <td>-1.142840</td>\n",
+       "      <td>-0.035091</td>\n",
+       "      <td>-0.290841</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41501617</th>\n",
+       "      <td>-1.182425</td>\n",
+       "      <td>0.024084</td>\n",
+       "      <td>-0.242117</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27068728</th>\n",
+       "      <td>-0.953909</td>\n",
+       "      <td>-0.048368</td>\n",
+       "      <td>-0.139067</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11168523</th>\n",
+       "      <td>-0.932355</td>\n",
+       "      <td>-0.040622</td>\n",
+       "      <td>-0.328286</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.842422</td>\n",
-       "      <td>0.09375</td>\n",
-       "      <td>-0.671875</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.828125</td>\n",
-       "      <td>0.09375</td>\n",
-       "      <td>-0.671875</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.828125</td>\n",
-       "      <td>0.09375</td>\n",
-       "      <td>-0.660301</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.828125</td>\n",
-       "      <td>0.09375</td>\n",
-       "      <td>-0.666720</td>\n",
+       "      <th>10530308</th>\n",
+       "      <td>-0.935708</td>\n",
+       "      <td>0.019645</td>\n",
+       "      <td>0.403783</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2149,22 +2289,80 @@
        "</div>"
       ],
       "text/plain": [
-       "       AccV    AccML     AccAP  StartHesitation  Turn  Walking  All_zero\n",
-       "0 -0.843750  0.09375 -0.671875                0     0        0         1\n",
-       "1 -0.842422  0.09375 -0.671875                0     0        0         1\n",
-       "2 -0.828125  0.09375 -0.671875                0     0        0         1\n",
-       "3 -0.828125  0.09375 -0.660301                0     0        0         1\n",
-       "4 -0.828125  0.09375 -0.666720                0     0        0         1"
+       "              AccV     AccML     AccAP  StartHesitation  Turn  Walking  \\\n",
+       "35205870 -1.142840 -0.035091 -0.290841                0     0        1   \n",
+       "41501617 -1.182425  0.024084 -0.242117                0     0        1   \n",
+       "27068728 -0.953909 -0.048368 -0.139067                0     1        0   \n",
+       "11168523 -0.932355 -0.040622 -0.328286                0     0        0   \n",
+       "10530308 -0.935708  0.019645  0.403783                0     0        0   \n",
+       "\n",
+       "          All_zero  \n",
+       "35205870         0  \n",
+       "41501617         0  \n",
+       "27068728         0  \n",
+       "11168523         1  \n",
+       "10530308         1  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# oversampling_defog_dataset.to_parquet('Data/clean/oversampling_defog_dataset.parquet')\n",
-    "oversampling_defog_dataset.head()"
+    "set_defog_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_defog_data.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_defog_data.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Save process data\n",
+    "\n",
+    "# set_defog_data.to_parquet('Data/Process/set_defog_data.parquet')\n",
+    "# test_defog_data.to_parquet('Data/Process/test_defog_data.parquet')"
    ]
   },
   {
@@ -2172,59 +2370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 70% Train Data, 10% Validation Data, 20% Test Data\n",
-    "\n",
-    "\n",
-    "80% Set Data(60% Train Data, 20% Validation Data) , 20% Test Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "import random \n",
-    "random_seed = 54\n",
-    "\n",
-    "set_defog_data, test_defog_data = train_test_split(oversampling_defog_dataset, test_size=0.2, random_state=True)\n",
-    "set_defog_data.shape, test_defog_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oversampling_defog_dataset.shape[0] == set_defog_data.shape[0] + test_defog_data.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set_defog_data.head()"
+    "Bz of 16gb ram full retake from save data"
    ]
   },
   {
@@ -2241,6 +2387,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import pandas as pd\n",
+    "\n",
+    "# set_defog_data = pd.read_parquet('Data/Process/set_defog_data.parquet')\n",
+    "# test_defog_data = pd.read_parquet('Data/Process/test_defog_data.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9101279, 9103583, 9102949, 9100273)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "a = set_defog_data[set_defog_data.StartHesitation == 1].shape[0]\n",
     "b = set_defog_data[set_defog_data.Turn == 1].shape[0]\n",
     "c = set_defog_data[set_defog_data.Walking == 1].shape[0]\n",
@@ -2250,18 +2419,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "set_defog_data.shape[0] == a + b + c + d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2276249, 2273938, 2274579, 2277255)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = test_defog_data[test_defog_data.StartHesitation == 1].shape[0]\n",
     "b = test_defog_data[test_defog_data.Turn == 1].shape[0]\n",
@@ -2272,11 +2463,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test_tdcsfog_data.shape[0] == a + b + c + d"
+    "test_defog_data.shape[0] == a + b + c + d"
    ]
   },
   {
@@ -2284,30 +2486,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# # Save process data\n",
-    "\n",
-    "# set_tdcsfog_data.to_parquet('Data/Process/set_tdcsfog_data.parquet')\n",
-    "# test_tdcsfog_data.to_parquet('Data/Process/test_tdcsfog_data.parquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_tdcsfog_data.duplicated().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set_tdcsfog_data.duplicated().sum()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
