--- a/Model_Test.ipynb
+++ b/Model_Test.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,9 +89,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['AccAP'], dtype='object')\n",
+      "Power Transform start\n"
+     ]
+    }
+   ],
    "source": [
     "train_feature, valid_feature, train_label, valid_label = preprocessing_the_dataset(set_defog_dataset)"
    ]
@@ -276,27 +285,27 @@
    "source": [
     "\n",
     "\n",
-    "# This function train all the Dataset and all models\n",
-    "def Train_all_Model():\n",
+    "# # This function train all the Dataset and all models\n",
+    "# def Train_all_Model():\n",
     "\n",
-    "    Dataset_scores = {}\n",
+    "#     Dataset_scores = {}\n",
     "\n",
-    "    for Name, values in Meta_Dataset.items():\n",
-    "        print(f\"The {Name} Dataset is using.........\")\n",
-    "        i = 1\n",
-    "        Model_scores = {} #Model = Socre\n",
-    "        for Model_Name, classifier in Models.items():\n",
-    "            print(f\"{i}. {Model_Name}\")\n",
-    "            classifier.fit(values[0], values[1])\n",
-    "            score = calculate_socre(classifier=classifier,\n",
-    "                                    test_features=values[2],\n",
-    "                                    test_labels=values[3])\n",
-    "            i = i+1\n",
-    "            print(f\"{score}\")\n",
-    "            Model_scores[Model_Name] = score\n",
-    "        print(\"________________________________________\")\n",
-    "        Dataset_scores[Name] = Model_scores\n",
-    "    return Dataset_scores\n",
+    "#     for Name, values in Meta_Dataset.items():\n",
+    "#         print(f\"The {Name} Dataset is using.........\")\n",
+    "#         i = 1\n",
+    "#         Model_scores = {} #Model = Socre\n",
+    "#         for Model_Name, classifier in Models.items():\n",
+    "#             print(f\"{i}. {Model_Name}\")\n",
+    "#             classifier.fit(values[0], values[1])\n",
+    "#             score = calculate_socre(classifier=classifier,\n",
+    "#                                     test_features=values[2],\n",
+    "#                                     test_labels=values[3])\n",
+    "#             i = i+1\n",
+    "#             print(f\"{score}\")\n",
+    "#             Model_scores[Model_Name] = score\n",
+    "#         print(\"________________________________________\")\n",
+    "#         Dataset_scores[Name] = Model_scores\n",
+    "#     return Dataset_scores\n",
     "\n"
    ]
   },
