--- a/Model_Test.ipynb
+++ b/Model_Test.ipynb
@@ -99,6 +99,26 @@
       "Index(['AccAP'], dtype='object')\n",
       "Power Transform start\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_448736/2940679096.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  feature_dataset[skew_columns] = pt.fit_transform(feature_dataset[skew_columns])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standardization start\n",
+      "Train test split begin\n"
+     ]
     }
    ],
    "source": [
@@ -107,9 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((29126467, 3), (7281617, 3), (29126467, 4), (7281617, 4))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_feature.shape, valid_feature.shape, train_label.shape, valid_label.shape"
    ]
@@ -124,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,17 +195,17 @@
     "\n",
     "#Building Model Dict\n",
     "Models = {\n",
-    "    \"Logistic Regression\": LogisticRegression(),                    \n",
-    "    \"Support Vector Classifier\": SVC(),                             \n",
+    "    # \"Logistic Regression\": LogisticRegression(),                    \n",
+    "    # \"Support Vector Classifier\": SVC(),                             \n",
     "    \"Decision Tree\": DecisionTreeClassifier(),           \n",
     "    \"KNearest\": KNeighborsClassifier(),                \n",
-    "    \"GaussianNB\" : GaussianNB(),                                    \n",
-    "    \"LDA\" : LinearDiscriminantAnalysis(),                            \n",
+    "    # \"GaussianNB\" : GaussianNB(),                                    \n",
+    "    # \"LDA\" : LinearDiscriminantAnalysis(),                            \n",
     "    \"Ridge\" : RidgeClassifier(),                                      \n",
-    "    \"QDA\" : QuadraticDiscriminantAnalysis(),                        \n",
+    "    # \"QDA\" : QuadraticDiscriminantAnalysis(),                        \n",
     "    \"Bagging\" : BaggingClassifier(),                                \n",
     "    \"MLP\" : MLPClassifier(),                                        \n",
-    "    \"LSVC\" : LinearSVC(),                                           \n",
+    "    # \"LSVC\" : LinearSVC(),                                           \n",
     "    \"BernoulliNB\" : BernoulliNB(),                                  \n",
     "    \"Passive_AC\" : PassiveAggressiveClassifier(),                   \n",
     "    \"SGB\"     : GradientBoostingClassifier(),\n",
@@ -188,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,21 +251,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "np.random.seed(40)\n",
     "from mlflow import MlflowClient\n",
     "from mlflow.entities import ViewType\n",
     "from mlflow.models.signature import infer_signature\n",
     "\n",
-    "!mlflow server --backend-store-uri sqlite:///backend.db"
+    "# !mlflow server --backend-store-uri sqlite:///backend.db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +278,6 @@
     "    base_score   = classifier.score(test_features,test_labels)\n",
     "    accuracy = accuracy_score(test_labels, predictions)\n",
     "    av_precision = average_precision_score(test_labels, predictions)\n",
-    "    precision = precision_score(test_labels, predictions)\n",
     "    recall = recall_score(test_labels, predictions)\n",
     "    f1score = f1_score(test_labels, predictions)\n",
     "    Matrix = confusion_matrix(test_labels, predictions)\n",
@@ -279,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,9 +342,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import mlflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Decision Tree\n"
+     ]
+    }
+   ],
    "source": [
     "counter = 1\n",
     "for Model_Name, classifier in Models.items(): \n",
