from deep learning

--- a/Model_Test.ipynb
+++ b/Model_Test.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "((29126467, 3), (7281617, 3), (29126467, 4), (7281617, 4))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -325,170 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Decision Tree\n",
-      "Classification report\n",
-      "--------------------- \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "StartHesitation       1.00      1.00      1.00   1822100\n",
-      "           Turn       0.86      0.88      0.87   1819501\n",
-      "        Walking       0.92      0.94      0.93   1819885\n",
-      "       All_zero       0.86      0.81      0.83   1820131\n",
-      "\n",
-      "      micro avg       0.91      0.91      0.91   7281617\n",
-      "      macro avg       0.91      0.91      0.91   7281617\n",
-      "   weighted avg       0.91      0.91      0.91   7281617\n",
-      "    samples avg       0.91      0.91      0.91   7281617\n",
-      " \n",
-      "\n",
-      "Accuracy Measures\n",
-      "--------------------- \n",
-      "\n",
-      "Base score:  0.9089096556437946\n",
-      "Accuracy:  0.9089096556437946\n",
-      "Avarge Precision:  0.8522553099560889\n",
-      "Because f1 socre is not quality. The model is skip to saving phase.\n",
-      "________________________________________\n",
-      "2. KNearest\n",
-      "Classification report\n",
-      "--------------------- \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "StartHesitation       1.00      1.00      1.00   1822100\n",
-      "           Turn       0.84      0.93      0.89   1819501\n",
-      "        Walking       0.89      0.98      0.93   1819885\n",
-      "       All_zero       0.94      0.74      0.83   1820131\n",
-      "\n",
-      "      micro avg       0.92      0.91      0.91   7281617\n",
-      "      macro avg       0.92      0.91      0.91   7281617\n",
-      "   weighted avg       0.92      0.91      0.91   7281617\n",
-      "    samples avg       0.91      0.91      0.91   7281617\n",
-      " \n",
-      "\n",
-      "Accuracy Measures\n",
-      "--------------------- \n",
-      "\n",
-      "Base score:  0.9114667799748325\n",
-      "Accuracy:  0.9114667799748325\n",
-      "Avarge Precision:  0.85981436472155\n",
-      "Because f1 socre is not quality. The model is skip to saving phase.\n",
-      "________________________________________\n",
-      "3. Ridge\n",
-      "Classification report\n",
-      "--------------------- \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "StartHesitation       0.00      0.00      0.00   1822100\n",
-      "           Turn       0.63      0.09      0.16   1819501\n",
-      "        Walking       0.22      0.00      0.00   1819885\n",
-      "       All_zero       0.98      0.08      0.16   1820131\n",
-      "\n",
-      "      micro avg       0.75      0.04      0.08   7281617\n",
-      "      macro avg       0.46      0.04      0.08   7281617\n",
-      "   weighted avg       0.46      0.04      0.08   7281617\n",
-      "    samples avg       0.04      0.04      0.04   7281617\n",
-      " \n",
-      "\n",
-      "Accuracy Measures\n",
-      "--------------------- \n",
-      "\n",
-      "Base score:  0.044394946891603886\n",
-      "Accuracy:  0.044394946891603886\n",
-      "Avarge Precision:  0.2742070544749251\n",
-      "Because f1 socre is not quality. The model is skip to saving phase.\n",
-      "________________________________________\n",
-      "4. MLP\n",
-      "Classification report\n",
-      "--------------------- \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "StartHesitation       0.80      0.92      0.86   1822100\n",
-      "           Turn       0.67      0.43      0.52   1819501\n",
-      "        Walking       0.65      0.38      0.48   1819885\n",
-      "       All_zero       0.78      0.38      0.51   1820131\n",
-      "\n",
-      "      micro avg       0.74      0.53      0.62   7281617\n",
-      "      macro avg       0.72      0.53      0.59   7281617\n",
-      "   weighted avg       0.72      0.53      0.59   7281617\n",
-      "    samples avg       0.52      0.53      0.53   7281617\n",
-      " \n",
-      "\n",
-      "Accuracy Measures\n",
-      "--------------------- \n",
-      "\n",
-      "Base score:  0.5196918486649326\n",
-      "Accuracy:  0.5196918486649326\n",
-      "Avarge Precision:  0.5100220865136526\n",
-      "Because f1 socre is not quality. The model is skip to saving phase.\n",
-      "________________________________________\n",
-      "5. Extra_T\n"
+      "1. R_Neighour\n"
      ]
     },
     {
