it_is_for_deep_NN

--- a/Model_Test.ipynb
+++ b/Model_Test.ipynb
@@ -133,11 +133,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 2,
-=======
-   "execution_count": 6,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,11 +148,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 3,
-=======
-   "execution_count": 7,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [
     {
@@ -165,11 +157,7 @@
        "((29126467, 3), (7281617, 3), (29126467, 4), (7281617, 4))"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 3,
-=======
-     "execution_count": 7,
->>>>>>> fbbd28a (test xgb)
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,11 +176,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 4,
-=======
-   "execution_count": 8,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,11 +196,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 5,
-=======
-   "execution_count": 9,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,11 +219,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 6,
-=======
-   "execution_count": 10,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,31 +235,19 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 7,
-=======
-   "execution_count": 11,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
     "from sklearn.metrics import average_precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "from sklearn.metrics import f1_score\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import matthews_corrcoef\n",
-    "from sklearn.metrics import precision_score,confusion_matrix,classification_report"
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 8,
-=======
-   "execution_count": 12,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,11 +262,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 9,
-=======
-   "execution_count": 13,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,11 +302,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 10,
-=======
-   "execution_count": 14,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [
     {
@@ -365,18 +321,13 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 11,
-=======
-   "execution_count": 15,
->>>>>>> fbbd28a (test xgb)
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "1. R_Neighour\n"
      ]
     },
@@ -394,47 +345,6 @@
      "output_type": "error",
      "traceback": [
       "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-=======
-      "1. XGB\n",
-      "Classification report\n",
-      "--------------------- \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "StartHesitation       0.92      0.95      0.93   1822100\n",
-      "           Turn       0.72      0.53      0.61   1819501\n",
-      "        Walking       0.70      0.55      0.61   1819885\n",
-      "       All_zero       0.84      0.51      0.64   1820131\n",
-      "\n",
-      "      micro avg       0.80      0.63      0.71   7281617\n",
-      "      macro avg       0.79      0.63      0.70   7281617\n",
-      "   weighted avg       0.79      0.63      0.70   7281617\n",
-      "    samples avg       0.63      0.63      0.63   7281617\n",
-      " \n",
-      "\n",
-      "Accuracy Measures\n",
-      "--------------------- \n",
-      "\n",
-      "Base score:  0.6292563863218843\n",
-      "Accuracy:  0.6292563863218843\n",
-      "Avarge Precision:  0.6075655920483543\n",
-      "Because f1 socre is not quality. The model is skip to saving phase.\n",
-      "________________________________________\n"
->>>>>>> fbbd28a (test xgb)
      ]
     }
    ],
