--- a/Model_Test.ipynb
+++ b/Model_Test.ipynb
@@ -205,13 +205,13 @@
     "#Building Model Dict\n",
     "Models = {                         \n",
     "    # \"Decision Tree\": DecisionTreeClassifier(),      \n",
-    "    # \"KNearest\": KNeighborsClassifier(),           \n",
+    "    \"KNearest\": KNeighborsClassifier(n_jobs=-1),           \n",
     "    # \"Ridge\" : RidgeClassifier(),              #poor result    \n",
     "    # \"MLP\" : MLPClassifier(),                  #poor result              \n",
     "    # \"R_Neighour\" : RadiusNeighborsClassifier(),\n",
     "    # \"Extra_T\" : ExtraTreesClassifier(),\n",
     "    # \"R_forest\" : RandomForestClassifier(),\n",
-    "    \"XGB\" : xgb.XGBClassifier(),\n",
+    "    # \"XGB\" : xgb.XGBClassifier(),\n",
     "    # \"Catboost\" : CatBoostClassifier()\n",
     "    }\n",
     "\n"
