--- a/Model_Test.ipynb
+++ b/Model_Test.ipynb
@@ -1,33 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Taking low dataset\n",
-    "\n",
-    "* train_test_split\n",
-    "* data preprocessing\n",
-    "  \n",
-    "\n",
-    "### Model building and test with mlflow and kfold\n",
-    "\n",
-    "** Test with 3 dataset. 1 dataset for each models. **\n",
-    "- defog - and its models. (search for its best models.)\n",
-    "- tdcsfog - and its models. (search for its best models and parameters)\n",
-    "- Both dataset combine and its models. (search for its best models and parameters)\n",
-    "\n",
-    "### Model searching the best parameter\n",
-    "\n",
-    "### Testing with many data again and Retune\n",
-    "\n",
-    "### final model with test data\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +132,7 @@
        "((29126467, 3), (7281617, 3), (29126467, 4), (7281617, 4))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -321,14 +296,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. KNearest\n"
+      "1. KNearest\n",
+      "Classification report\n",
+      "--------------------- \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "StartHesitation       1.00      1.00      1.00   1822100\n",
+      "           Turn       0.84      0.93      0.89   1819501\n",
+      "        Walking       0.89      0.98      0.93   1819885\n",
+      "       All_zero       0.94      0.74      0.83   1820131\n",
+      "\n",
+      "      micro avg       0.92      0.91      0.91   7281617\n",
+      "      macro avg       0.92      0.91      0.91   7281617\n",
+      "   weighted avg       0.92      0.91      0.91   7281617\n",
+      "    samples avg       0.91      0.91      0.91   7281617\n",
+      " \n",
+      "\n",
+      "Accuracy Measures\n",
+      "--------------------- \n",
+      "\n",
+      "Base score:  0.9114667799748325\n",
+      "Accuracy:  0.9114667799748325\n",
+      "Avarge Precision:  0.85981436472155\n"
      ]
     }
    ],
